--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="content">
-        <h2>AWS S3 Image Processor</h2>
+        <h1>image processor on the cloud, a cloud called aws</h1>
         <div>
           <h3>Upload your image here:</h3>
           <form method="POST" action="/upload" enctype=multipart/form-data>
